--- a/index.html
+++ b/index.html
@@ -6,8 +6,179 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
     <link rel="stylesheet" href="/styles/leader.css">
+    <script src="https://kit.fontawesome.com/abb8e82ec2.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <!-- header-start -->
+    <header>
+
+    </header>
+    <!-- header-end -->
+    <!-- main-section-start -->
+    <main>
+        <section class="container">
+           <div class="top-players">
+            <h2 class="section-title">Top Players</h2>
+            <div class="players">
+                <div class="player">
+                    <img src="/images/Ellipse-1.png" alt="">
+                    <h3 class="player-name">player-1</h3>
+                </div>
+                <div class="player">
+                    <img src="/images/Ellipse-2.png" alt="">
+                    <h3 class="player-name">player-2</h3>
+                </div>
+                <div class="player">
+                    <img src="/images/Ellipse-3.png" alt="">
+                    <h3 class="player-name">player-3</h3>
+                </div>
+                <div class="player">
+                    <img src="/images/Ellipse-4.png" alt="">
+                    <h3 class="player-name">player-4</h3>
+                </div>
+                <div class="player">
+                    <img src="/images/Ellipse-5.png" alt="">
+                    <h3 class="player-name">player-5</h3>
+                </div>
+                <div class="player">
+                    <img src="/images/Ellipse.png" alt="">
+                    <h3 class="player-name">player-6</h3>
+                </div>
+            </div>
+           </div>
+           <hr>
+           <div class="top-blogs">
+            <div class="blogs">
+                <article class="blog">
+                    <div class="thumnil">
+                        <img src="/images/Mask Group.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumnil">
+                        <img src="/images/Mask Group-1.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumnil">
+                        <img src="/images/Mask Group-5.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumnil">
+                        <img src="/images/Mask Group-2.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                    </div>
+                </article>
+            </div>
+           </div>
+        </section>
+        <!--------------------------------------------
+                        latest course 
+        ---------------------------------------------->
+        <section class="container">
+            <h2 class="section-title">
+                Latest Course
+            </h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/Mask Group-3.png">
+                    </div>
+                    <div class="course-detaile">
+                        <h3 class="course-title">
+                            React - The Complete Guide 2020
+                        </h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1.30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/Group 2.png">
+                    </div>
+                    <div class="course-detaile">
+                        <h3 class="course-title">
+                            React - The Complete Guide 2020
+                        </h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1.30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/Mask Group-4.png">
+                    </div>
+                    <div class="course-detaile">
+                        <h3 class="course-title">
+                            React - The Complete Guide 2020
+                        </h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star filed"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1.30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <!-- main-section-end -->
 </body>
 </html>
